Добавил анимацию + верстку на flexbox

--- a/lab4/tips.html
+++ b/lab4/tips.html
@@ -21,7 +21,7 @@
     <main>
         <h2>Советы по сбору грибов</h2>
 		<div class="onbackground">
-			<ul>
+			<ul class="tips">
                 <li>Не забывайте брать с собой корзину и нож для срезания грибов.</li>
                 <li>Избегайте сбора грибов вблизи дорог и промышленных зон.</li>
                 <li>Собирайте грибы только в тех местах, где вы уверены в их безопасности.</li>
