Добавил верстку с применением Grid

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,7 +6,7 @@
     <title>Справочник по грибным местам Самары</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="indexpage">
     <header>
         <h1>Грибные места Самары</h1>
         <nav>
@@ -22,7 +22,57 @@
 		<h2>Добро пожаловать на сайт о грибных местах Самары!</h2>
 		<div class="onbackground">
 			<p>Здесь вы найдете информацию о лучших местах для сбора грибов в Самаре и окрестностях.</p>
-			<img id="mainpic" src="images/main.webp" alt="Грибы в лесу">
+			<div class="gallery">
+				<img id="mainpic" src="images/main.webp" alt="Грибы в лесу">
+				<img src="images/m1.webp" alt="Грибы в лесу">
+				<img src="images/m2.jpg" alt="Грибы в лесу">
+				<img src="images/m3.jpg" alt="Грибы в лесу">
+				<img src="images/m4.jpg" alt="Грибы в лесу">
+				<img src="images/m5.jpg" alt="Грибы в лесу">
+				<img src="images/m6.jpg" alt="Грибы в лесу">
+				<img src="images/m7.jpg" alt="Грибы в лесу">
+				<img src="images/m8.jpg" alt="Грибы в лесу">
+				<img src="images/m9.jpg" alt="Грибы в лесу">
+				<img src="images/m10.jpg" alt="Грибы в лесу">
+				<img src="images/m1.webp" alt="Грибы в лесу">
+				<img src="images/m2.jpg" alt="Грибы в лесу">
+				<img src="images/m3.jpg" alt="Грибы в лесу">
+				<img src="images/m4.jpg" alt="Грибы в лесу">
+				<img src="images/m5.jpg" alt="Грибы в лесу">
+				<img src="images/m6.jpg" alt="Грибы в лесу">
+				<img src="images/m7.jpg" alt="Грибы в лесу">
+				<img src="images/m8.jpg" alt="Грибы в лесу">
+				<img src="images/m9.jpg" alt="Грибы в лесу">
+				<img src="images/m10.jpg" alt="Грибы в лесу">
+				<img src="images/m1.webp" alt="Грибы в лесу">
+				<img src="images/m2.jpg" alt="Грибы в лесу">
+				<img src="images/m3.jpg" alt="Грибы в лесу">
+				<img src="images/m4.jpg" alt="Грибы в лесу">
+				<img src="images/m5.jpg" alt="Грибы в лесу">
+				<img src="images/m6.jpg" alt="Грибы в лесу">
+				<img src="images/m7.jpg" alt="Грибы в лесу">
+				<img src="images/m8.jpg" alt="Грибы в лесу">
+				<img src="images/m9.jpg" alt="Грибы в лесу">
+				<img src="images/m10.jpg" alt="Грибы в лесу">
+				<img src="images/m1.webp" alt="Грибы в лесу">
+				<img src="images/m2.jpg" alt="Грибы в лесу">
+				<img src="images/m3.jpg" alt="Грибы в лесу">
+				<img src="images/m4.jpg" alt="Грибы в лесу">
+				<img src="images/m5.jpg" alt="Грибы в лесу">
+				<img src="images/m6.jpg" alt="Грибы в лесу">
+				<img src="images/m7.jpg" alt="Грибы в лесу">
+				<img src="images/m8.jpg" alt="Грибы в лесу">
+				<img src="images/m9.jpg" alt="Грибы в лесу">
+				<img src="images/m10.jpg" alt="Грибы в лесу">
+				<img src="images/m1.webp" alt="Грибы в лесу">
+				<img src="images/m2.jpg" alt="Грибы в лесу">
+				<img src="images/m3.jpg" alt="Грибы в лесу">
+				<img src="images/m4.jpg" alt="Грибы в лесу">
+				<img src="images/m5.jpg" alt="Грибы в лесу">
+				<img src="images/m6.jpg" alt="Грибы в лесу">
+				<img src="images/m7.jpg" alt="Грибы в лесу">
+				<img src="images/m8.jpg" alt="Грибы в лесу">
+			</div>
 		</div>
     </main>
     <footer>
