Добавил загрузку данных с сервера

--- a/lab4/places.html
+++ b/lab4/places.html
@@ -20,21 +20,11 @@
     </header>
     <main>
         <h2>Места для сбора грибов</h2>
-        <table>
+        <table id="mushroom-places-table">
             <tr>
                 <th>Место</th>
                 <th>Описание</th>
                 <th>Сезон</th>
-            </tr>
-            <tr>
-                <td><a href="https://maps.app.goo.gl/NgyWSykUx2n2WdAGA" target="_blank">Лес у реки Волга</a></td>
-                <td>Отличное место для сбора белых грибов и лисичек.</td>
-                <td>Июль-Сентябрь</td>
-            </tr>
-            <tr>
-                <td><a href="https://maps.app.goo.gl/evwAxLiMTYpwYQLSA" target="_blank">Парк Дружбы</a></td>
-                <td>Можно найти опята и подберезовики.</td>
-                <td>Август-Октябрь</td>
             </tr>
         </table>
 		<div id="suggestion" class="onbackground">
@@ -67,5 +57,6 @@
     <footer>
         <p>&copy; 2004 Грибные места Самары</p>
     </footer>
+	<script src="places.js"></script>
 </body>
 </html>
